--- a/template.yml
+++ b/template.yml
@@ -55,6 +55,45 @@ Resources:
           Type: Schedule
           Properties:
             Schedule: rate(1 day)
+  
+  ##########################################
+  # CloudWatch Alarms
+  ##########################################
+  LambdaErrorAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmName: CryptoNewsLambda-Error-Alarm
+      AlarmDescription: Alarm for Lambda function errors.
+      Namespace: AWS/Lambda
+      MetricName: Errors
+      Dimensions:
+        - Name: FunctionName
+          Value: !Ref CryptoNewsLambda
+      Statistic: Sum
+      Period: 300
+      EvaluationPeriods: 1
+      Threshold: 1
+      ComparisonOperator: GreaterThanOrEqualToThreshold
+      AlarmActions:
+        - !Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:CryptoAlerts" # Update SNS topic if required
+
+  LambdaInvocationAlarm:
+    Type: AWS::CloudWatch::Alarm
+    Properties:
+      AlarmName: CryptoNewsLambda-Invocation-Alarm
+      AlarmDescription: Alarm for Lambda function invocation count exceeding the threshold.
+      Namespace: AWS/Lambda
+      MetricName: Invocations
+      Dimensions:
+        - Name: FunctionName
+          Value: !Ref CryptoNewsLambda
+      Statistic: Sum
+      Period: 300
+      EvaluationPeriods: 1
+      Threshold: 100
+      ComparisonOperator: GreaterThanOrEqualToThreshold
+      AlarmActions:
+        - !Sub "arn:aws:sns:${AWS::Region}:${AWS::AccountId}:CryptoAlerts" # Update SNS topic if required
 
 Outputs:
   LambdaFunctionName:
