--- a/template.yml
+++ b/template.yml
@@ -35,7 +35,7 @@ Resources:
       Description: Fetches crypto news and sends alert if negative sentiment is detected
       Handler: lambda_function.lambda_handler
       Runtime: python3.9
-      CodeUri: app
+      CodeUri: src
       Timeout: 60  # Adjust as needed
       Environment:
         Variables:
