--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,14 +2,14 @@ name: Python Tests
 
 on:
   push:
-    branches: [ "main", "dev" ]
+    branches: ["main", "dev"]
   pull_request:
-    branches: [ "main", "dev" ]
+    branches: ["main"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
@@ -26,4 +26,5 @@ jobs:
 
       - name: Run tests
         run: |
+          export PYTHONPATH="${PYTHONPATH}:${GITHUB_WORKSPACE}/app"
           pytest
